--- a/Practice.html
+++ b/Practice.html
@@ -6,6 +6,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <img src="https://th.bing.com/th/id/OIP.x_DQacmdfOlPBB1QFkmkZQHaEK?w=332&h=187&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt=" <-- My test image" />
+    <img src="https://th.bing.com/th/id/OIP.x_DQacmdfOlPBB1QFkmkZQHaEK?w=332&h=187&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="My test image" />
   </body>
 </html>
