Customized final HTML Basics' code.

--- a/Practice.html
+++ b/Practice.html
@@ -5,21 +5,20 @@
     <title>My test page</title>
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
-    <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <h1>Look at this cat:</h1>
+    <img src="https://th.bing.com/th/id/OIP.J0_oteapoKEWo3LxVhEHdAHaFj?w=244&h=183&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="This is the cutest cat.">
 
-    <p>At Mozilla, we’re a global community of</p>
+    <p>It is:</p>
 
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
+      <li>Small</li>
+      <li>Orange</li>
+      <li>Perfect</li>
     </ul>
 
-    <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. 
-      We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+    <p>. This is why I need to have it.</p>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> 
-      to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>Go to <a href="https://www.google.com">Google</a> 
+      to find more adorable cat pictures.</p>
   </body>
 </html>
